bin/tests/errors/sema/sema_err_method_outside_impl.swg
#global fileprivate

mtd E() {} // swc-expected-error {{sema_err_method_outside_impl}}
